# ChangeLog for games-fps/doomlegacy
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/doomlegacy/ChangeLog,v 1.6 2004/02/12 20:24:38 mr_bones_ Exp $

  12 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org>
  doomlegacy-1.41-r1.ebuild, metadata.xml:
  header fix; check return of sed

*doomlegacy-1.41-r1 (13 Oct 2003)

  29 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Add optional SDL support #33710.

  13 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Fix typo in sed script and fix legacy.dat mirroring.

*doomlegacy-1.41 (11 Oct 2003)

  11 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage.

*doomlegacy-1.40-r2 (13 Aug 2003)

  13 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Remove x86 specific code (#26201).  Add games.eclass support.

*doomlegacy-1.40-r1 (06 Mar 2003)

  29 Jul 2003; Michael Sterrett <msterret@gentoo.org>
  doomlegacy-1.40-r1.ebuild:
  use sed -i

  06 Mar 2003; Mike Frysinger <vapier@gentoo.org> :
  Added a patch to fix glibc errno (#16267) #16715.
  Also tweaked makefile patch to allow custom CFLAGS.

*doomlegacy-1.40 (28 Oct 2002)

  30 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Added a small patch for people who arent running with `opengl-update xfree`

  28 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Dries Harnie <Bulletz_1900@hotmail.com>.